--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -8,6 +8,11 @@
     echo $this->headStyle() . PHP_EOL;
     echo $this->headScript() . PHP_EOL;
     ?>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body>
@@ -33,6 +38,6 @@
         <div id="footer"></div>
     </div>
 </div>
-<?php $this->inlineScript(); ?>
+<?php echo $this->inlineScript(); ?>
 </body>
 </html>
